deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testowner
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /testowner(/|$)(.*)
          backend:
            service:
              name: testowner
              port:
                number: 8080
